# python-project-template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .env  .gitignore  README.md  pyproject.toml  ruff.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: logger.py  main.py
{{cookiecutter.project_slug}}/tests/: tests_sample.py
